# docs/swagger.yaml
@@ -18,6 +18,8 @@ definitions:
         type: string
       id:
         type: string
+      link:
+        type: string
       name:
         type: string
       price:
@@ -45,6 +47,8 @@ definitions:
     properties:
       account_id:
         type: string
+      deal_id:
+        type: integer
       id:
         type: integer
       is_payment:
@@ -66,6 +70,8 @@ definitions:
         type: boolean
       id:
         type: integer
+      commission:
+        type: number
       payment_status:
         type: boolean
       price:
