# internal/entities/account.go
@@ -1,6 +1,7 @@
 package entities
 
 import (
+	"fmt"
 	"time"
 )
 
@@ -17,6 +18,7 @@ type Deal struct {
 	ID            *int       `json:"id,omitempty"`
 	AccountID     *string    `json:"account_id,omitempty"`
 	BuyerID       *int       `json:"buyer_id,omitempty"`
+	Commission    *float64   `json:"commission,omitempty"`
 	Data          *Data      `json:"data,omitempty"`
 	Price         *float64   `json:"price,omitempty"`
 	Wallet        *string    `json:"wallet,omitempty"`
@@ -32,6 +34,7 @@ func (d *Deal) IsZero() bool {
 type Account struct {
 	UID         string    `json:"id"`
 	CreatedAt   time.Time `json:"created_at"`
+	Link        string    `json:"link,omitempty"`
 	Category    Category  `json:"category,omitzero"`
 	Price       float64   `json:"price"`
 	Description string    `json:"description"`
@@ -40,6 +43,12 @@ type Account struct {
 	ViewType    bool      `json:"view_type"`
 	Name        string    `json:"name"`
 	Deal        Deal      `json:"deal,omitzero"`
+}
+
+func (a *Account) InitLink(botLink string) {
+	if a != nil {
+		a.Link = fmt.Sprintf("%s/%s", botLink, a.UID)
+	}
 }
 
 type AllAccounts struct {
@@ -83,6 +92,15 @@ type AcceptableTypesAccounts []TypeAccount
 type Data struct {
 	ID        int    `json:"id,omitempty"`
 	AccountID string `json:"account_id"`
+	DealID    *int   `json:"deal_id,omitempty"`
 	IsPayment bool   `json:"is_payment"`
 	Value     string `json:"value"`
+}
+
+type Accounts []*Account
+
+func (a Accounts) InitLinks(baseURL string) {
+	for i := range a {
+		a[i].InitLink(baseURL)
+	}
 }
